# Bilibili_knowledge

./: .env.example  .gitignore  README.md  bilibili_subtitle_service.py  config.py  example.py  install.sh  main.py  pyproject.toml  start_web.py  test_service.py  web_interface.py
templates/: index.html
